@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 21-Nov-2010 Christophe Demko
  # $ Translating the label field instead of the name field in JLIB_FORM_VALIDATE_FIELD_INVALID error
+ # [#23409] Category Icon on Components Menu
 
 21-Nov-2010 Jean-Marie Simonet
  # [#23361] default template in component.php view always in use
